Missing forward declaration of ZeroFrame

XMLWordPrintable

    • b32

        This can be reproduced with a version like

        https://github.com/openjdk/jdk/commit/9cac94d581f240c10fe8fff2f803109a1ae30637

        $ git diff
        diff --git a/src/hotspot/share/code/codeBlob.hpp b/src/hotspot/share/code/codeBlob.hpp
        index 61d33463387..78fdaa32629 100644
        --- a/src/hotspot/share/code/codeBlob.hpp
        +++ b/src/hotspot/share/code/codeBlob.hpp
        @@ -27,6 +27,7 @@
         
         #include "asm/codeBuffer.hpp"
         #include "compiler/compilerDefinitions.hpp"
        +#include "runtime/javaFrameAnchor.hpp"
         #include "runtime/frame.hpp"
         #include "runtime/handles.hpp"
         #include "utilities/align.hpp"
        =============================================

        In file included from /jdk2/ken/open/src/hotspot/share/runtime/javaFrameAnchor.hpp:82,
                         from /jdk2/ken/open/src/hotspot/share/code/codeBlob.hpp:30,
                         from /jdk2/ken/open/src/hotspot/share/code/codeCache.hpp:28,
                         from /jdk2/ken/open/src/hotspot/cpu/zero/assembler_zero.inline.hpp:31,
                         from /jdk2/ken/open/src/hotspot/share/asm/assembler.inline.hpp:30,
                         from /jdk2/ken/open/src/hotspot/share/compiler/abstractDisassembler.cpp:30:
        /jdk2/ken/open/src/hotspot/cpu/zero/javaFrameAnchor_zero.hpp:30:3: error: 'ZeroFrame' does not name a type
           30 | ZeroFrame* volatile _last_Java_fp;
              | ^~~~~~~~~

              Assignee:
              Jesper Wilhelmsson
              Reporter:
              Ioi Lam
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: