8270993: Missing forward declaration of ZeroFrame